# HomeControl

./: .gitattributes  .gitignore  README.md
.github/workflows/: ci.yml
api/: openapi.json
core/: pyproject.toml
core/homecontrol/: __init__.py  __main__.py  app.py  config.py  events.py  models.py  state.py  timers.py
core/homecontrol/api/: __init__.py  internal.py  rest.py  system.py  ws.py
core/homecontrol/spotify/: __init__.py  base.py  librespot.py  mock.py  web.py
core/scripts/: export_openapi.py
core/tests/: test_api.py  test_spotify_librespot.py  test_web.py
docs/: architecture.md  audio-hat.md  design.md  hardware-validation.md  known-issues.md  voice.md
provisioning/: README.md  deploy.sh  healthcheck.sh  install.sh  phase2-spotify.sh  phase5-voice.sh  uninstall.sh
provisioning/kiosk/: start-kiosk.sh
provisioning/spotify/: onevent.sh  pair.py
provisioning/sudoers.d/: homecontrol-kiosk
provisioning/systemd/: homecontrol-core.service  homecontrol-kiosk.service  homecontrol-voice.service  librespot.service
ui/: index.html  package-lock.json  package.json  vite.config.js
ui/src/: App.svelte  app.css  main.js
ui/src/lib/: Browse.svelte  DevicePicker.svelte  Keyboard.svelte  NowPlaying.svelte  Tile.svelte  Timers.svelte  VoiceOverlay.svelte  alarm.js  format.js  store.js
voice/: pyproject.toml
voice/homecontrol_voice/: __init__.py  __main__.py  actions.py  audio.py  config.py  ducking.py  intent.py  pipeline.py  stt.py  tts.py  wakeword.py
voice/tests/: test_actions.py  test_config.py  test_ducking.py  test_intent.py
