[project]
name = "homecontrol-core"
version = "0.1.0"
description = "HomeControl Core Service — orchestrator + API for the multi-room Spotify intercom appliance"
requires-python = ">=3.11"
dependencies = [
    # fastapi + pydantic are pinned exactly: they determine the exported OpenAPI schema,
    # and CI byte-diffs api/openapi.json against the committed contract. Bump deliberately,
    # regenerate the schema, and commit both together.
    "fastapi==0.136.3",
    "pydantic==2.13.4",
    "pydantic-settings==2.14.1",
    "uvicorn[standard]>=0.29",
    "websockets>=12.0",
]

[project.optional-dependencies]
# Subsystem deps land as their phases do — kept out of the base install so the
# skeleton runs anywhere (no ALSA/PipeWire/aiortc needed for Phase 1).
spotify = ["httpx>=0.27"]              # Spotify Web API client
mesh = ["zeroconf>=0.131"]             # mDNS discovery
intercom = ["aiortc>=1.9"]             # WebRTC intercom
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "httpx>=0.27", "ruff>=0.4"]

[project.scripts]
homecontrol = "homecontrol.__main__:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["homecontrol*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
