[project]
name = "homecontrol-voice"
version = "0.1.0"
description = "HomeControl voice pipeline — wake word + STT (whisper.cpp) + intent + TTS (Piper)"
requires-python = ">=3.11"
dependencies = [
    # The dispatch side only needs an HTTP client to drive the Core Service API.
    "httpx>=0.27",
]

[project.optional-dependencies]
# Heavy / native ML + audio deps. Installed on the Pi by phase5-voice.sh; kept out of the
# base so the intent parser and dispatch logic stay importable and testable anywhere.
# (whisper.cpp and Piper are invoked as binaries via subprocess, built/installed by the
# phase script — they are not Python packages here.)
pipeline = [
    "openwakeword>=0.6",
    "sounddevice>=0.4",
    "numpy>=1.26",
]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "ruff>=0.4"]

[project.scripts]
homecontrol-voice = "homecontrol_voice.__main__:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["homecontrol_voice*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
